--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jarvis</title>
+
+    <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon">
+
     <!--Bootsrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -70,6 +73,7 @@
 
 
     <script src="main.js"></script>
+    <script src="/eel.js"></script>
 
 </body>
 
