--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,10 @@
     <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon">
 
     <!--Bootsrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!--Bootsrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.min.css">
 
     <!-- Particle js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
@@ -26,45 +28,86 @@
 </head>
 
 <body>
-    <section id="Oval" class="mb-4">
+    <div class="container">
 
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="d-flex justify-content-center aligh-item-center" style="height: 80vh;">
+        <section id="Oval" class="mb-4">
 
-                    <canvas id="canvasOne" width="700" height="420" style="position: absolute;"></canvas>
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    <div class="d-flex justify-content-center aligh-item-center" style="height: 80vh;">
 
-                    <div id="JarvisHood">
+                        <canvas id="canvasOne" width="700" height="420" style="position: absolute;"></canvas>
 
-                        <div class="square">
-                            <span class="circle"></span>
-                            <span class="circle"></span>
-                            <span class="circle"></span>
+                        <div id="JarvisHood">
+
+                            <div class="square">
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+                                <span class="circle"></span>
+
+                            </div>
 
                         </div>
 
                     </div>
+                    <h5 class="text-light text text-center">Ask Me Anything</h5>
+
+                    <div class="col-md-12 mt-4 pt-4">
+                        <div class="text-center">
+                            <div id="TextInput" class="d-flex">
+
+                                <input type="text" class="input-field" name="chatbox" id="chatbox"
+                                    placeholder="type here ...">
+                                <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
+                                <button id="ChatBtn" class="glow-on-hover"><i class="bi bi-chat-dots"></i></button>
+                                <button id="SettingsBtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
+
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
-                <h5 class="text-light text text-center">Ask Me Anything</h5>
-
+                <div class="col-md-1"></div>
             </div>
-            <div class="col-md-1"></div>
-        </div>
 
-    </section>
+        </section>
+
+        <section id="SiriWave" class="mb-4" hidden>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="d-flex justify-content-center aligh-item-center" style="height: 100vh;">
+                            <div class="container">
+                                <p class="text-start text-light mb-8 siri-message">Sushavan Das a best player wllll to good</p>
+                                <div id="siri-container"></div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+    </div>
 
     <!--Jquery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <!--Bootsrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
     <!--Particle js-->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
     <script src="script.js"></script>
+
+    <!-- Siri wave -->
+    <script src="https://unpkg.com/siriwave/dist/siriwave.umd.min.js"></script>
 
     <!-- Textllate js-->
     <script src="assets/vendore/texllate/jquery.fittext.js"></script>
