Add converter Text To Speech(TTS)

--- a/www/index.html
+++ b/www/index.html
@@ -57,8 +57,7 @@
                         <div class="text-center">
                             <div id="TextInput" class="d-flex">
 
-                                <input type="text" class="input-field" name="chatbox" id="chatbox"
-                                    placeholder="type here ...">
+                                <input type="text" class="input-field" name="chatbox" id="chatbox" placeholder="type here ...">
                                 <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
                                 <button id="ChatBtn" class="glow-on-hover"><i class="bi bi-chat-dots"></i></button>
                                 <button id="SettingsBtn" class="glow-on-hover"><i class="bi bi-gear"></i></button>
@@ -80,7 +79,7 @@
                     <div class="col-md-12">
                         <div class="d-flex justify-content-center aligh-item-center" style="height: 100vh;">
                             <div class="container">
-                                <p class="text-start text-light mb-8 siri-message">Sushavan Das a best player wllll to good</p>
+                                <p class="text-start text-light mb-8 siri-message" style="font-size: 30px;">Hello, I am J.A.R.V.I.S</p>
                                 <div id="siri-container"></div>
                             </div>
 
