Display backend Text In Frontend. Means Backend Connect With Frontend

--- a/www/index.html
+++ b/www/index.html
@@ -115,6 +115,7 @@
 
 
     <script src="main.js"></script>
+    <script src="controller.js"></script>
     <script src="/eel.js"></script>
 
 </body>
