--- a/www/index.html
+++ b/www/index.html
@@ -220,7 +220,7 @@
                                         aria-labelledby="AboutTab-tab">
 
                                         <h1>Developed By</h1>
-                                        <h3>Digambar Chaudhari</h3>
+                                        <h3>Sushavan Das</h3>
 
 
                                     </div>
@@ -356,7 +356,7 @@
                                             aria-labelledby="HelpCommand-tab">
 
                                             <h1>Developed By</h1>
-                                            <h3>Digambar Chaudhari</h3>
+                                            <h3>Sushavan Das</h3>
 
 
                                         </div>
